# Weather-ETL-Pipeline

./: .gitignore  README.md  conftest.py  metabase.excalidraw  pyproject.toml
.github/workflows/: ci.yml
config/: .env.example
dags/: dag_coleta_salvador.py
data/: weather_data.json  weather_silver.json
infra/: docker-compose.yml
infra/airflow/: Dockerfile
infra/postgres/: 00_init_airflow.sh  init.sql
infra/postgres/gold/: vw_alertas_historico.sql  vw_condicao_atual.sql  vw_estatisticas_mensais.sql  vw_estatisticas_semanais.sql  vw_resumo_diario.sql  vw_tendencia_temperatura.sql
notebooks/: analysis.ipynb
src/: __init__.py  alertas.py  extract.py  extract_version_one.py  gold.py  load.py  storage.py  transform.py
tests/: test_alertas.py  test_extract.py  test_gold.py  test_load.py  test_storage.py  test_transform.py
